# COMP590_HCI_S26

antigravity-hex/: .gitignore  HexServer.py  pyproject.toml
circle-packing/: main.py  pyproject.toml
circle-packing/src/api/: __init__.py  routes.py
circle-packing/src/modules/: __init__.py  pack.py
circle-packing/static/css/: circle-packing.css
circle-packing/static/js/: circle-packing.js
circle-packing/templates/: index.html
gumballs/: Gumballs.py  pyproject.toml
gumballs_v2/: Gumballs.py  pyproject.toml
hex/: WebHex.py  main.py  pyproject.toml
hex/app/: main.py
hex/app/api/create_game/: routes.py
hex/app/api/download_moves/: routes.py
hex/app/api/submit_move/: routes.py
hex/app/modules/game/: hex_game.py  utils.py
hex/src/api/: __init__.py
hex/src/api/create_game/: routes.py
hex/src/api/download_moves/: routes.py
hex/src/api/submit_move/: io.py  routes.py
hex/src/api/undo_move/: routes.py
hex/src/modules/: __init__.py
hex/src/modules/game/: hex_game.py  types.py
hex/static/css/: hex.css
hex/static/js/: hex.js
hex/templates/: index.html
opengl-cube/src/: main.cpp  main.ilk
